# scottyShapes

./: README.md  scottyShapes.cabal
app/: Main.hs  Main.lhs  SVGInterpreter.hs  SVGInterpreter.lhs  Shapes.hs  Shapes.lhs  index.html
