name:          scottyShapes
version:       1.0.0
cabal-version: >= 1.8
build-type:    Simple
category:      Web
license:       BSD3
description:   A webapp that allows the generation of SVG images according to a defined DSL
author:        Oisin Johnston
license-file:  LICENSE

executable          scottyShapes
    hs-source-dirs: ./app
    main-is:        Main.lhs
    other-modules:  Shapes
                  , SVGInterpreter
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , scotty
                  , blaze-svg
                  , blaze-html
                  , text

source-repository head
    type:        git
    location:    https://github.com/DaJuice/scottyShapes.git
